Added custom cursor

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		body {	
 			background-image: url(/img/pink_background.jpg);
 			background-size: 1500px;
+			cursor: url(/img/flower_pink_orchid.png),default;
 		}
 
 		.h2 {
